# acoustid-web

./: .gitignore  README.md  check.sh  manage.py  mypy.ini  pyproject.toml  reformat.sh  run.sh  setup.cfg
acoustid_web/: asgi.py  settings.py  urls.py  wsgi.py
acoustid_web/apps/main/: apps.py  models.py  views.py
acoustid_web/apps/main/migrations/: 0001_initial.py
acoustid_web/apps/main/static/: acoustid.css
acoustid_web/apps/main/templates/: about.html  base.html  contact.html  docs.html  index.html  login.html  stats.html
dev/: check.sh  manage.sh  reformat.sh  run.sh
