[tool.poetry]
name = "acoustid-web"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Lukáš Lalinský <lalinsky@gmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.0.0"
django-mail-auth = "^3.2.0"
whitenoise = "^6.2.0"

[tool.poetry.dev-dependencies]
# grpcio-tools = "^1.36.1"
mypy = "^0.991"
flake8 = "^6.0.0"
isort = "^5.10.1"
black = "^22.10.0"
django-stubs = "^1.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
